--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>各種給付申請フォーム</title>
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h3>申請書作成フォーム（●●給付金）</h3>
